--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./index.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +9,16 @@
 </head>
 
 <body>
-    <h1 style="color:blue;text-align:center;">This is a heading</h1>
-    <img src="ufo.png" alt="ufo" width="600" height="600">
+
+   <div class="grid-wraper">
+       <img src="ufo.png" alt="ufo">
+       <div class="grid-content">
+        <h1>404</h1>
+        <h3>PAGE NOT FOUND</h3>
+        <a href="https://www.youtube.com/">YouTube</a>
+       </div>
+   </div>
+    
     
 </body>
 </html>
